# dingtalk-sdk

./: .typos.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic_client.rs  send_im_message.rs  stream_client.rs
src/: activity.rs  agoal.rs  ai_global_e_c.rs  ai_interaction.rs  ai_paa_s.rs  algo.rs  alitrip.rs  amdp.rs  apaas.rs  app_market.rs  assistant.rs  assistant_2_0.rs  ats.rs  attendance.rs  attendance_1_0.rs  badge.rs  bay_max.rs  bizfinance.rs  bizfinance_2_0.rs  blackboard.rs  calendar.rs  callback.rs  carbon.rs  card.rs  check_in.rs  chengfeng.rs  client.rs  conference.rs  connector.rs  contact.rs  content.rs  contract.rs  conv_file.rs  cool_app.rs  cool_ops.rs  credit.rs  crm.rs  crm_2_0.rs  customer_service.rs  datacenter.rs  (+88 more)
tests/: client_integration.rs  openapi_generated_integration.rs  openapi_module_integration.rs
tools/: parity_sync.py
