[package]
name = "dingtalk-sdk"
version = "0.1.0"
edition = "2021"
description = "DingTalk SDK for Rust - A comprehensive SDK for DingTalk API"
license = "MIT OR Apache-2.0"
authors = ["Palpo IM Team"]
keywords = ["dingtalk", "sdk", "api", "alibaba"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/palpo-im/dingtalk-sdk"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
sha1 = "0.10"
rand = "0.8"
aes = "0.8"
cbc = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = []
full = []
