[package]
name = "dingtalk-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "DingTalk SDK for Rust - A comprehensive SDK for DingTalk API"
license = "MIT OR Apache-2.0"
authors = ["Palpo IM Team"]
keywords = ["dingtalk", "sdk", "api", "alibaba"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/palpo-im/dingtalk-sdk"
readme = "README.md"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
url = "2.5.8"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
tracing = "0.1.44"
sha1 = "0.10.6"
rand = "0.10.0"
aes = "0.8.4"
cbc = "0.1.2"

[dev-dependencies]
tokio-test = "0.4.5"
wiremock = "0.6.5"

[features]
default = []
full = []
